Cards and footer

--- a/index.html
+++ b/index.html
@@ -54,5 +54,31 @@
         </ul>
       </div>
     </nav>
+    <main>
+      <h1 class="text-center m-5">Page heading</h1>
+      <div class="d-flex flex-wrap justify-content-center">
+        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div
+          class="card m-3 card-border"
+          style="width: 264px; height: 263px"
+        ></div>
+        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div
+          class="card m-3 card-fill"
+          style="width: 264px; height: 263px"
+        ></div>
+        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div
+          class="card m-3 card-border"
+          style="width: 264px; height: 263px"
+        ></div>
+      </div>
+    </main>
+    <footer class="py-2 px-5 align-middle d-flex">
+      <span>hello@email.com</span>
+      <span>Copyright 2020</span>
+    </footer>
   </body>
 </html>
