--- a/index.html
+++ b/index.html
@@ -23,55 +23,53 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-      <a class="navbar-brand nav_item-logo p-2 w-100 bd-highlight" href="#"
-        >MA1</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="collapse navbar-collapse p-2 flex-shrink-1 bd-highlight"
-        id="navbarSupportedContent"
-      >
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active nav_item-home">
-            <a class="nav-link nav_item-home" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item nav_item-about">
-            <a class="nav-link nav_item-about" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand" href="#">MA1</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <main>
       <h1 class="text-center m-5">Page heading</h1>
       <div class="d-flex flex-wrap justify-content-center">
-        <div class="card m-3" style="width: 264px; height: 263px"></div>
-        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div class="card m-3 shadow" style="width: 264px; height: 263px"></div>
+        <div class="card m-3 shadow" style="width: 264px; height: 263px"></div>
         <div
-          class="card m-3 card-border"
+          class="card m-3 shadow card-border"
           style="width: 264px; height: 263px"
         ></div>
-        <div class="card m-3" style="width: 264px; height: 263px"></div>
-        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div class="card m-3 shadow" style="width: 264px; height: 263px"></div>
+        <div class="card m-3 shadow" style="width: 264px; height: 263px"></div>
         <div
-          class="card m-3 card-fill"
+          class="card m-3 shadow card-fill"
           style="width: 264px; height: 263px"
         ></div>
-        <div class="card m-3" style="width: 264px; height: 263px"></div>
+        <div class="card m-3 shadow" style="width: 264px; height: 263px"></div>
         <div
-          class="card m-3 card-border"
+          class="card m-3 shadow card-border"
           style="width: 264px; height: 263px"
         ></div>
       </div>
